[SYNCOPE-1901] Reflow